--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -123,7 +123,7 @@ const { title, description } = Astro.props;
                   class="cta"
                   style="width:20%; margin:60px 30px; float:right; "
                 >
-                  <CallToAction href="/website/work/">
+                  <CallToAction href="/work/">
                     
                     View All
                     <div>
