--- a/src/pages/landing.astro
+++ b/src/pages/landing.astro
@@ -70,9 +70,9 @@ const { title, description } = Astro.props;
 			<script src="../scripts/test.js" ></script>
 			<div style="display: flex; align-items: flex-end; justify-content: center; height: 100%;">
 			<div id="showAfter" class="float roles" style="display:none; width:100%; position: absolute; bottom:0.5rem; height:200px; padding:0 10%;">
-						<PillBut  href="/website/">Home</PillBut>
-						<PillBut  href="/website/work/">Work</PillBut>
-						<PillBut  href="/website/about/">About</PillBut>
+						<PillBut  href="/">Home</PillBut>
+						<PillBut  href="/work/">Work</PillBut>
+						<PillBut  href="/about/">About</PillBut>
 				</div>
 	
 			</div>
