--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -149,7 +149,7 @@ const { title, description } = Astro.props;
                   class="cta"
                   style="width:20%; margin:60px 30px; float:right; "
                 >
-                  <CallToAction href="/website/coding/">
+                  <CallToAction href="/coding/">
                     View All
                     <div>
                     <Icon icon="arrow-right" size="1.2em"  />
