--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -27,7 +27,7 @@ const iconLinks: {
 
 <nav>
   <div class="menu-header">
-    <a href="/" class="site-title">
+    <a href="/landing" class="site-title">
       <Icon icon="terminal-window" color="var(--accent-regular)" size="1.6em" />
       Chen Hsi
     </a>
